# qr-file-transfer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION_OLD.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
docs/: DESIGN.md  GAP_ANALYSIS.md  GLOSSARY.md  INDEX.md  OPS_GUIDE.md  REQUIREMENTS.md  TEST_PLAN.md
docs/adr/: 001-default-grid-size.md  002-cli-only-mvp.md  003-video-format.md  004-compression.md  005-integrity-algorithm.md  006-max-file-size.md  007-cli-framework.md  008-qr-library.md  009-progress-library.md
docs/archive/: DOCUMENTATION_GUIDELINES.md  PROJECT_SUMMARY.md
docs/specs/: algorithms.md  cli-reference.md  data-protocol.md
src/qr_transfer/: __init__.py  cli.py  constants.py  errors.py
src/qr_transfer/core/: decoder.py  encoder.py  protocols.py
src/qr_transfer/qr/: detector.py  generator.py
src/qr_transfer/utils/: compression.py  file_ops.py  integrity.py  progress.py  validation.py
src/qr_transfer/video/: decoder.py  encoder.py
tests/: conftest.py
tests/contract/: test_cli_contract.py
tests/e2e/: test_e2e.py
tests/integration/: test_performance.py  test_pipeline.py
tests/security/: test_security.py
tests/unit/: test_compression.py  test_errors.py  test_file_ops.py  test_integrity.py  test_progress.py  test_protocols.py  test_validation.py
