[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-transfer"
version = "0.1.0"
description = "Air-gapped file transfer using animated QR codes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "jibeex" }]
keywords = ["qr", "air-gap", "file-transfer", "security"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "opencv-python>=4.8.0,<5.0.0",
    "qrcode[pil]>=7.4.0,<8.0.0",
    "pyzbar>=0.1.9",
    "Pillow>=10.0.0,<11.0.0",
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
qr-transfer = "qr_transfer.cli:main"

[project.urls]
Homepage = "https://github.com/jibeex/qr-file-transfer"
Repository = "https://github.com/jibeex/qr-file-transfer"
Issues = "https://github.com/jibeex/qr-file-transfer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=qr_transfer --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
